--- a/_posts/2015-10-31-hellomd.md
+++ b/_posts/2015-10-31-hellomd.md
@@ -1,10 +1,11 @@
 ---
-yout: default
+layout: default
 title: makedown document
 ---
 <h2>{{ page.title }}</h2>
 <p>this is a makedown paper</p>
-it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)
+<p>it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)</p>
+
 <p>this is a makedown paper</p>
 
 <p>{{ page.date | date_to_string }}</p>
