--- a/_posts/2015-10-31-hellomd.md
+++ b/_posts/2015-10-31-hellomd.md
@@ -2,10 +2,12 @@
 layout: default
 title: makedown document
 ---
+
 <h2>{{ page.title }}</h2>
 <p>this is a makedown paper</p>
 <p>it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)</p>
 
+it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)
 <p>this is a makedown paper</p>
 
 <p>{{ page.date | date_to_string }}</p>
