--- a/_posts/2015-10-31-hellomd.md
+++ b/_posts/2015-10-31-hellomd.md
@@ -7,7 +7,16 @@ title: makedown document
 <p>this is a makedown paper</p>
 <p>it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)</p>
 
-it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)
+    it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)
+
+# This is an <h1> tag
+## This is an <h2> tag
+###### This is an <h6> tag
+
+* Item 1
+* item 2
+  *item 2a
+
 <p>this is a makedown paper</p>
 
 <p>{{ page.date | date_to_string }}</p>
