--- a/_posts/2015-10-31-hellomd.md
+++ b/_posts/2015-10-31-hellomd.md
@@ -9,13 +9,33 @@ title: makedown document
 
     it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)
 
-# This is an <h1> tag
-## This is an <h2> tag
-###### This is an <h6> tag
+# This is an 
+
+## This is an 
+
+###### This is an 
 
 * Item 1
 * item 2
-  *item 2a
+  * item 2a
+
+Sometimes you want numbered lists:
+1. One 
+2. Two
+sometimes we want numbered lists:
+* the first term 
+* the second term
+- the fisrt term
+  - like shis
+
+this is an image
+![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
+```c
+prinft("helloworld!\n")
+```
+how about math equation 
+$\frac_{1}^{\sigma}$
+
 
 <p>this is a makedown paper</p>
 
