--- a/_posts/2016-01-30-tryagamd.md
+++ b/_posts/2016-01-30-tryagamd.md
@@ -4,5 +4,8 @@ title: TEST MAKEDONW
 ---
 <h2>{{ page.title }}</h2>
 #### print "hello world!"
+# jia
+## jiadd
+### jiao
 <p>我的第一篇文章</p>
 <p>{{ page.date | date_to_string }}</p>
