--- a/_posts/2015-10-31-hellomd.md
+++ b/_posts/2015-10-31-hellomd.md
@@ -3,6 +3,9 @@ layout: default
 title: makedown document
 ---
 
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+
+
 <h2>{{ page.title }}</h2>
 <p>this is a makedown paper</p>
 <p>it's very easy to make some words **blod** and other words *italic* with Maekdown you can wnen [link to Google!](http://google.com)</p>
@@ -37,6 +40,7 @@ prinft("helloworld!\n")
 
 how about math equation 
 $\frac_{1}^{\sigma}$
+$$\frac_{1}^{\sigma}$$
 
 
 <p>this is a makedown paper</p>
